# ml-research-template

./: .gitignore  README.md  pyproject.toml
demo/: SFT_on_reasoning.ipynb
deploy/: sky.yaml
experiments/CoT_monitor_evaluation/: main.py  plot.py
experiments/CoT_monitor_evaluation/functions/: generate_completions.py  load_hf_completions.py  rate_completions.py
experiments/GRPO_MBPP/: main.py
experiments/GRPO_MBPP/configs/: base.yaml  debug.yaml  debug_gemma_1_B_sweep.yaml  gemma_1_B_sweep.yaml  reward_hacking.yaml  reward_hacking_SFT.yaml  reward_hacking_with_sft.yaml
experiments/GRPO_MBPP/functions/: sft_warmup.py  train_grpo.py
experiments/SFT_reasoning/: main.py
experiments/SFT_reasoning/configs/: base.yaml  debug.yaml  debug_gemma_1_B_sweep.yaml  gemma_1_B_sweep.yaml
experiments/SFT_reasoning/functions/: data_preparation.py  evaluator.py  train_sft.py
experiments/SFT_reward_hacking/: main.py
experiments/SFT_reward_hacking/configs/: base.yaml  debug.yaml  one_epoch.yaml
experiments/SFT_reward_hacking/functions/: data_preparation.py  evaluator.py  train_sft.py
experiments/generate_reward_hacky_dataset/: main.py
experiments/introspection/: main.py
lib/: activation_steering.py  completion_logger.py  saving_run.py
lib/MBPP/: __init__.py  cot_monitor.py  data_preparation.py  reward_manager.py
lib/reasoning_format/: __init__.py  evaluator.py  format.py
test/: conftest.py  test_activation_steering.py  test_cot_monitor.py  test_data_preparation.py  test_datasets.py  test_reasoning_format.py  test_reward_functions.py
(+119 files in other folders)
